--- a/vijay.html
+++ b/vijay.html
@@ -10,5 +10,6 @@
         <h2>Vijay</h2>
     </center>
     <hr>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod placeat, aperiam sint tempora modi voluptatibus consequatur! Aliquam omnis totam ipsum soluta, natus vel, quam, exercitationem porro sed quasi a eveniet.</p>
 </body>
 </html>
